thông tin ban đầu

--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -303,6 +303,7 @@
     <LightSwitchModel Include="My Project\Proxies.lsml" />
     <LightSwitchModel Include="Screens\KhachHangListDetail.lsml" />
     <LightSwitchModel Include="Screens\NhaCungCapListDetail.lsml" />
+    <LightSwitchModel Include="Screens\Đơn_Vị_Sử_DụngListDetail.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
