đơn vị sử dụng (thông tin ban đầu)

--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -292,6 +292,9 @@
     <Compile Include="Screens\NhaCungCapListDetail.lsml.vb">
       <DependentUpon>NhaCungCapListDetail.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Đơn_Vị_Sử_DụngListDetail.lsml.vb">
+      <DependentUpon>Đơn_Vị_Sử_DụngListDetail.lsml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <LightSwitchModel Include="My Project\Client.lsml">
