--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -295,6 +295,9 @@
     <Compile Include="Screens\Đơn_Vị_Sử_DụngListDetail.lsml.vb">
       <DependentUpon>Đơn_Vị_Sử_DụngListDetail.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\Đơn_Vị_TínhListDetail.lsml.vb">
+      <DependentUpon>Đơn_Vị_TínhListDetail.lsml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <LightSwitchModel Include="My Project\Client.lsml">
@@ -307,6 +310,7 @@
     <LightSwitchModel Include="Screens\KhachHangListDetail.lsml" />
     <LightSwitchModel Include="Screens\NhaCungCapListDetail.lsml" />
     <LightSwitchModel Include="Screens\Đơn_Vị_Sử_DụngListDetail.lsml" />
+    <LightSwitchModel Include="Screens\Đơn_Vị_TínhListDetail.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
