--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -341,6 +341,8 @@
       <DependentUpon>Đơn_Vị_TínhListDetail.lsml</DependentUpon>
     </Compile>
     <Compile Include="UserCode\Application.vb" />
+    <Compile Include="UserCode\Shared\IModule.vb" />
+    <Compile Include="UserCode\Shared\MultiSelectGridExtensions.vb" />
   </ItemGroup>
   <ItemGroup>
     <LightSwitchModel Include="My Project\Client.lsml">
