--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -328,6 +328,9 @@
     <Compile Include="Screens\Nhập_Sản_PhẩmListDetail.lsml.vb">
       <DependentUpon>Nhập_Sản_PhẩmListDetail.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\ThuReportPreviewScreen.lsml.vb">
+      <DependentUpon>ThuReportPreviewScreen.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\ThusListDetail.lsml.vb">
       <DependentUpon>ThusListDetail.lsml</DependentUpon>
     </Compile>
@@ -373,6 +376,7 @@
     <LightSwitchModel Include="Screens\vTồn_Quỹ_Tiền_MặtSearch.lsml" />
     <LightSwitchModel Include="Screens\vTonQuyTienMatReportPreviewScreen.lsml" />
     <LightSwitchModel Include="Screens\ChiReportPreviewScreen.lsml" />
+    <LightSwitchModel Include="Screens\ThuReportPreviewScreen.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
