--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -343,6 +343,9 @@
     <Compile Include="Screens\vDoanh_Thu_Ngày_Theo_Khách_HàngSearch.lsml.vb">
       <DependentUpon>vDoanh_Thu_Ngày_Theo_Khách_HàngSearch.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\vLời_Lỗ_NgàySearch.lsml.vb">
+      <DependentUpon>vLời_Lỗ_NgàySearch.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\vTonQuyTienMatReportPreviewScreen.lsml.vb">
       <DependentUpon>vTonQuyTienMatReportPreviewScreen.lsml</DependentUpon>
     </Compile>
@@ -391,6 +394,8 @@
     <LightSwitchModel Include="Screens\vDoanh_Thu_Ngày_Theo_Khách_HàngSearch.lsml" />
     <LightSwitchModel Include="Screens\vLời_Lỗ_Ngày_Theo_Sản_PhẩmSearch.lsml" />
     <LightSwitchModel Include="Screens\vDoanh_Thu_Ngày_Theo_Sản_PhẩmSearch.lsml" />
+    <LightSwitchModel Include="Screens\vLời_Lỗ_Ngày_Theo_Khách_HàngSearch.lsml" />
+    <LightSwitchModel Include="Screens\vLời_Lỗ_NgàySearch.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
