--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -331,6 +331,9 @@
     <Compile Include="Screens\Nhập_Sản_PhẩmListDetail.lsml.vb">
       <DependentUpon>Nhập_Sản_PhẩmListDetail.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\vTheKhoReportPreviewScreen.lsml.vb">
+      <DependentUpon>vTheKhoReportPreviewScreen.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\ThuReportPreviewScreen.lsml.vb">
       <DependentUpon>ThuReportPreviewScreen.lsml</DependentUpon>
     </Compile>
@@ -346,11 +349,20 @@
     <Compile Include="Screens\vLời_Lỗ_NgàySearch.lsml.vb">
       <DependentUpon>vLời_Lỗ_NgàySearch.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\vThẻ_Kho_Tổng_HợpSearch.lsml.vb">
+      <DependentUpon>vThẻ_Kho_Tổng_HợpSearch.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\vTonQuyTienMatReportPreviewScreen.lsml.vb">
       <DependentUpon>vTonQuyTienMatReportPreviewScreen.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\vTonTongHopReportPreviewScreen.lsml.vb">
+      <DependentUpon>vTonTongHopReportPreviewScreen.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\vTồn_Quỹ_Tiền_MặtSearch.lsml.vb">
       <DependentUpon>vTồn_Quỹ_Tiền_MặtSearch.lsml</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\vTồn_Tổng_HợpSearch.lsml.vb">
+      <DependentUpon>vTồn_Tổng_HợpSearch.lsml</DependentUpon>
     </Compile>
     <Compile Include="Screens\Xuất_Sản_PhẩmListDetail.lsml.vb">
       <DependentUpon>Xuất_Sản_PhẩmListDetail.lsml</DependentUpon>
@@ -401,6 +413,8 @@
     <LightSwitchModel Include="Screens\vLời_Lỗ_NgàySearch.lsml" />
     <LightSwitchModel Include="Screens\vTồn_Tổng_HợpSearch.lsml" />
     <LightSwitchModel Include="Screens\vThẻ_Kho_Tổng_HợpSearch.lsml" />
+    <LightSwitchModel Include="Screens\vTonTongHopReportPreviewScreen.lsml" />
+    <LightSwitchModel Include="Screens\vTheKhoReportPreviewScreen.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
