--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -365,6 +365,12 @@
     <LightSwitchModel Include="DataSources\BanHangData\vLời_Lỗ_Ngày_Theo_Sản_Phẩm.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\vThẻ_Kho_Tổng_Hợp.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\vTồn_Tổng_Hợp.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\NhomKhachHang.lsml">
+      <DependentUpon>Nhóm_Đối_Tượng.lsml</DependentUpon>
+    </LightSwitchModel>
+    <LightSwitchModel Include="DataSources\BanHangData\NhomNhaCungCap.lsml">
+      <DependentUpon>Nhóm_Đối_Tượng.lsml</DependentUpon>
+    </LightSwitchModel>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
