--- a/BANHANG/BANHANG.Server/Web.config
+++ b/BANHANG/BANHANG.Server/Web.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="UserCodeAssemblies" value="Application.Server.dll" />
-    <add key="ExtensionAssemblies" value="Microsoft.LightSwitch.Extensions.Server.dll;C1.LightSwitch.FlexGrid.Common.dll;C1.LightSwitch.FlexGrid.Server.dll;DevExpress.XtraReports.v13.1.LightSwitch.Server.dll;DevExpress.Data.v13.1.dll;DevExpress.Office.v13.1.Core.dll;DevExpress.Utils.v13.1.dll;DevExpress.XtraEditors.v13.1.dll;DevExpress.Xpo.v13.1.dll;DevExpress.RichEdit.v13.1.Core.dll;DevExpress.Charts.v13.1.Core.dll;DevExpress.XtraCharts.v13.1.dll;DevExpress.Sparkline.v13.1.Core.dll;DevExpress.PivotGrid.v13.1.Core.dll;DevExpress.Printing.v13.1.Core.dll;DevExpress.Xpf.Printing.v13.1.Service.dll;DevExpress.XtraReports.v13.1.dll;DevExpress.XtraReports.v13.1.Service.dll" />
+    <add key="ExtensionAssemblies" value="Microsoft.LightSwitch.Extensions.Server.dll;C1.LightSwitch.FlexGrid.Common.dll;C1.LightSwitch.FlexGrid.Server.dll;DevExpress.XtraReports.v13.1.LightSwitch.Server.dll;DevExpress.Data.v13.1.dll;DevExpress.Office.v13.1.Core.dll;DevExpress.Utils.v13.1.dll;DevExpress.XtraEditors.v13.1.dll;DevExpress.Xpo.v13.1.dll;DevExpress.RichEdit.v13.1.Core.dll;DevExpress.Charts.v13.1.Core.dll;DevExpress.XtraCharts.v13.1.dll;DevExpress.Sparkline.v13.1.Core.dll;DevExpress.PivotGrid.v13.1.Core.dll;DevExpress.Printing.v13.1.Core.dll;DevExpress.Xpf.Printing.v13.1.Service.dll;DevExpress.XtraReports.v13.1.dll;DevExpress.XtraReports.v13.1.Service.dll;Wijmo.LightSwitch.Common.dll;Wijmo.LightSwitch.Server.dll" />
     <!-- A value of true will enable diagnostic logging on the server -->
     <add key="Microsoft.LightSwitch.Trace.Enabled" value="false" />
     <!-- A value of true allows only local access to Trace.axd -->
