--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -364,11 +364,11 @@
     <LightSwitchModel Include="DataSources\BanHangData\vTon_Quy_Tien_Mat.lsml" />
     <LightSwitchModel Include="DataSources\XtraReportsServiceData\MessageEnvelopes.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\vDoanh_Thu_Ngay.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\vDoanh_Thu_Ngày_Theo_Khách_Hàng.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\vDoanh_Thu_Ngày_Theo_Sản_Phẩm.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\vLời_Lỗ_Ngày.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\vLời_Lỗ_Ngày_Theo_Khách_Hàng.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\vLời_Lỗ_Ngày_Theo_Sản_Phẩm.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\vDoanh_Thu_Ngay_Theo_Khach_Hang.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\vDoanh_Thu_Ngay_Theo_San_Pham.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\vLoi_Lo_Ngay.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\vLoi_Lo_Ngay_Theo_Khach_Hang.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\vLoi_Lo_Ngay_Theo_San_Pham.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\vThẻ_Kho_Tổng_Hợp.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\vTon_Tong_Hop.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\NhomKhachHang.lsml">
